--- a/docs/easy/tuple-to-object.mdx
+++ b/docs/easy/tuple-to-object.mdx
@@ -2,6 +2,7 @@
 sidebar_label: 'Tuple to Object'
 sidebar_position: 4
 ---
+
 # Readonly
 
 ## introduction
@@ -11,9 +12,9 @@ Give an array, transform into an object type and the key/value must in the given
 For example
 
 ```ts
-const tuple = ['tesla', 'model 3', 'model X', 'model Y'] as const
+const tuple = ['tesla', 'model 3', 'model X', 'model Y'] as const;
 
-const result: TupleToObject<typeof tuple> // expected { tesla: 'tesla', 'model 3': 'model 3', 'model X': 'model X', 'model Y': 'model Y'}
+const result: TupleToObject<typeof tuple>; // expected { tesla: 'tesla', 'model 3': 'model 3', 'model X': 'model X', 'model Y': 'model Y'}
 ```
 
 ## start point
@@ -21,30 +22,36 @@ const result: TupleToObject<typeof tuple> // expected { tesla: 'tesla', 'model 3
 ```ts
 /* _____________ Your Code Here _____________ */
 
-type TupleToObject<T extends readonly any[]> = any
+type TupleToObject<T extends readonly any[]> = any;
 
 /* _____________ Test Cases _____________ */
-import { Equal, Expect } from '@type-challenges/utils'
+import { Equal, Expect } from '@type-challenges/utils';
 
-const tuple = ['tesla', 'model 3', 'model X', 'model Y'] as const
+const tuple = ['tesla', 'model 3', 'model X', 'model Y'] as const;
 
 type cases = [
-  Expect<Equal<TupleToObject<typeof tuple>, { tesla: 'tesla'; 'model 3': 'model 3'; 'model X': 'model X'; 'model Y': 'model Y'}>>,
-]
+  Expect<
+    Equal<
+      TupleToObject<typeof tuple>,
+      { tesla: 'tesla'; 'model 3': 'model 3'; 'model X': 'model X'; 'model Y': 'model Y' }
+    >
+  >
+];
 
 // @ts-expect-error
-type error = TupleToObject<[[1, 2], {}]>
+type error = TupleToObject<[[1, 2], {}]>;
 ```
 
 ## my solution
 
 <details>
 
-  <summary>Spoiler warning // Click to reveal answer</summary>
+<summary>Spoiler warning // Click to reveal answer</summary>
 
 ```ts twoslash
 type TupleToObject<T extends readonly any[]> = {
-  [k in T[number]]: k
-}
+  [k in T[number]]: k;
+};
 ```
+
 </details>
